# snake-wasm

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_web.sh
include/: game.h  snake.h
src/: game.c  main.c  snake.c
